fixed tabs on smaller screen sizes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -321,17 +321,19 @@ a:visited {
 
 /* Tabs */
 .tabs {
+	position: relative;
 	background: var(--tabs-bg);
 	border-bottom: 1px solid var(--tabs-border-color);
 	height: 35px;
 }
 
 .tabs-items {
+	position: absolute;
 	display: flex;
 	align-items: center;
 	height: 100%;
 	overflow-x: auto;
-	max-width: calc(100vw - 300px);
+	max-width: 100%;
 }
 
 .tabs-item {
@@ -340,7 +342,7 @@ a:visited {
 	align-items: center;
 	justify-content: space-between;
 	padding: 0px 10px;
-	width: 150px;
+	min-width: 150px;
 	height: 100%;
 	border-right: 1px solid var(--tabs-item-border-color);
 	color: var(--tab-color);
@@ -500,6 +502,7 @@ a:visited {
 
 .note-list-items {
 	overflow-y: auto;
+	width: 100%;
 
 	flex: 1;
 	height: calc(100vh - 120px);
@@ -510,7 +513,7 @@ a:visited {
 	background: var(--note-list-item-bg);
 	height: 104px;
 	border-bottom: 1px solid var(--note-list-item-border);
-	border-radius: 4px;
+
 	cursor: pointer;
 	padding: 8px 15px;
 }
@@ -527,11 +530,17 @@ a:visited {
 	font-size: 16px;
 	font-weight: 600;
 	color: var(--note-title-color);
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .note-list-subtitle {
 	font-size: 14px;
 	color: var(--note-list-subtitle-color);
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .note-list-date {
@@ -646,6 +655,7 @@ a:visited {
 /* Note Close Btn */
 .note-close-btn {
 	display: none;
+	opacity: 0.5;
 	position: absolute;
 	bottom: 50px;
 	left: 223px;
@@ -661,6 +671,7 @@ a:visited {
 
 .note-close-btn:hover {
 	color: var(--note-close-btn-hover-color);
+	opacity: 1;
 }
 
 /* Media Queries */
